@@ -17,10 +17,17 @@
  */
 package org.apache.avro.io;
 
-import java.io.IOException;
 import java.io.EOFException;
+import java.io.IOException;
 import java.io.InputStream;
+import java.math.BigDecimal;
+import java.math.BigInteger;
 import java.nio.ByteBuffer;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Stack;
 
 import org.apache.avro.AvroTypeException;
 import org.apache.avro.Schema;
@@ -28,9 +35,13 @@ import org.apache.avro.io.parsing.JsonGrammarGenerator;
 import org.apache.avro.io.parsing.Parser;
 import org.apache.avro.io.parsing.Symbol;
 import org.apache.avro.util.Utf8;
+import org.codehaus.jackson.Base64Variant;
 import org.codehaus.jackson.JsonFactory;
+import org.codehaus.jackson.JsonLocation;
 import org.codehaus.jackson.JsonParser;
+import org.codehaus.jackson.JsonStreamContext;
 import org.codehaus.jackson.JsonToken;
+import org.codehaus.jackson.ObjectCodec;
 
 /** A {@link Decoder} for Avro's JSON data encoding. 
  * </p>
@@ -42,6 +53,13 @@ public class JsonDecoder extends ParsingDecoder
   implements Parser.ActionHandler {
   private JsonParser in;
   private static JsonFactory jsonFactory = new JsonFactory();
+  Stack<ReorderBuffer> reorderBuffers = new Stack<ReorderBuffer>();
+  ReorderBuffer currentReorderBuffer; 
+  
+  private static class ReorderBuffer {
+    public Map<String, List<JsonElement>> savedFields = new HashMap<String, List<JsonElement>>();
+    public JsonParser origParser = null; 
+  }
   
   static final String CHARSET = "ISO-8859-1";
 
@@ -427,26 +445,54 @@ public class JsonDecoder extends ParsingDecoder
   @Override
   public Symbol doAction(Symbol input, Symbol top) throws IOException {
     if (top instanceof Symbol.FieldAdjustAction) {
-      Symbol.FieldAdjustAction fa = (Symbol.FieldAdjustAction) top;
-      if (in.getCurrentToken() == JsonToken.FIELD_NAME) {
-        String fn = in.getCurrentName();
-        if (fa.fname.equals(fn)) {
-          in.nextToken();
+        Symbol.FieldAdjustAction fa = (Symbol.FieldAdjustAction) top;
+        String name = fa.fname;
+      if (currentReorderBuffer != null) {
+        List<JsonElement> node = currentReorderBuffer.savedFields.get(name);
+        if (node != null) {
+          currentReorderBuffer.savedFields.remove(name);
+          currentReorderBuffer.origParser = in;
+          in = makeParser(node);
           return null;
-        } else {
-          throw new AvroTypeException("Expected field name " + fa.fname +
-              " got " + in.getCurrentName());
         }
+      }
+      if (in.getCurrentToken() == JsonToken.FIELD_NAME) {
+        do {
+          String fn = in.getText();
+          in.nextToken();
+          if (name.equals(fn)) {
+            return null;
+          } else {
+            if (currentReorderBuffer == null) {
+              currentReorderBuffer = new ReorderBuffer();
+            }
+            currentReorderBuffer.savedFields.put(fn, getVaueAsTree(in));
+          }
+        } while (in.getCurrentToken() == JsonToken.FIELD_NAME);
+        throw new AvroTypeException("Expected field name not found: " + fa.fname);
+      }
+    } else if (top == Symbol.FIELD_END) {
+      if (currentReorderBuffer != null && currentReorderBuffer.origParser != null) {
+        in = currentReorderBuffer.origParser;
+        currentReorderBuffer.origParser = null;
       }
     } else if (top == Symbol.RECORD_START) {
       if (in.getCurrentToken() == JsonToken.START_OBJECT) {
         in.nextToken();
+        reorderBuffers.push(currentReorderBuffer);
+        currentReorderBuffer = null;
       } else {
         throw error("record-start");
       }
     } else if (top == Symbol.RECORD_END || top == Symbol.UNION_END) {
       if (in.getCurrentToken() == JsonToken.END_OBJECT) {
         in.nextToken();
+        if (top == Symbol.RECORD_END) {
+          if (currentReorderBuffer != null && !currentReorderBuffer.savedFields.isEmpty()) {
+            throw error("Unknown fields: " + currentReorderBuffer.savedFields.keySet());
+          }
+          currentReorderBuffer = reorderBuffers.pop();
+        }
       } else {
         throw error(top == Symbol.RECORD_END ? "record-end" : "union-end");
       }
@@ -454,6 +500,192 @@ public class JsonDecoder extends ParsingDecoder
       throw new AvroTypeException("Unknown action symbol " + top);
     }
     return null;
+  }
+
+  private static class JsonElement {
+    public final JsonToken token;
+    public final String value;
+    public JsonElement(JsonToken t, String value) {
+      this.token = t;
+      this.value = value;
+    }
+    
+    public JsonElement(JsonToken t) {
+      this(t, null);
+    }
+  }
+  
+  private static List<JsonElement> getVaueAsTree(JsonParser in) throws IOException {
+    int level = 0;
+    List<JsonElement> result = new ArrayList<JsonElement>();
+    do {
+      JsonToken t = in.getCurrentToken();
+      switch (t) {
+      case START_OBJECT:
+      case START_ARRAY:
+        level++;
+        result.add(new JsonElement(t));
+        break;
+      case END_OBJECT:
+      case END_ARRAY:
+        level--;
+        result.add(new JsonElement(t));
+        break;
+      case FIELD_NAME:
+      case VALUE_STRING:
+      case VALUE_NUMBER_INT:
+      case VALUE_NUMBER_FLOAT:
+      case VALUE_TRUE:
+      case VALUE_FALSE:
+      case VALUE_NULL:
+        result.add(new JsonElement(t, in.getText()));
+        break;
+      }
+      in.nextToken();
+    } while (level != 0);
+    result.add(new JsonElement(null));
+    return result;
+  }
+
+  private JsonParser makeParser(final List<JsonElement> elements) throws IOException {
+    return new JsonParser() {
+      int pos = 0;
+
+      @Override
+      public ObjectCodec getCodec() {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public void setCodec(ObjectCodec c) {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public void close() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public JsonToken nextToken() throws IOException {
+        pos++;
+        return elements.get(pos).token;
+      }
+
+      @Override
+      public JsonParser skipChildren() throws IOException {
+        int level = 0;
+        do {
+          switch(elements.get(pos++).token) {
+          case START_ARRAY:
+          case START_OBJECT:
+            level++;
+            break;
+          case END_ARRAY:
+          case END_OBJECT:
+            level--;
+            break;
+          }
+        } while (level > 0);
+        return this;
+      }
+
+      @Override
+      public boolean isClosed() {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public String getCurrentName() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public JsonStreamContext getParsingContext() {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public JsonLocation getTokenLocation() {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public JsonLocation getCurrentLocation() {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public String getText() throws IOException {
+        return elements.get(pos).value;
+      }
+
+      @Override
+      public char[] getTextCharacters() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public int getTextLength() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public int getTextOffset() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public Number getNumberValue() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public NumberType getNumberType() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public int getIntValue() throws IOException {
+        return Integer.parseInt(getText());
+      }
+
+      @Override
+      public long getLongValue() throws IOException {
+        return Long.parseLong(getText());
+      }
+
+      @Override
+      public BigInteger getBigIntegerValue() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public float getFloatValue() throws IOException {
+        return Float.parseFloat(getText());
+      }
+
+      @Override
+      public double getDoubleValue() throws IOException {
+        return Double.parseDouble(getText());
+      }
+
+      @Override
+      public BigDecimal getDecimalValue() throws IOException {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public byte[] getBinaryValue(Base64Variant b64variant)
+        throws IOException {
+        throw new UnsupportedOperationException();
+      }
+      
+      @Override
+      public JsonToken getCurrentToken() {
+        return elements.get(pos).token;
+      }
+    };
   }
 
   private AvroTypeException error(String type) {
